--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,14 @@ section {
   padding: 5% 10%;
 }
 
+h1 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 .sign-in {
   margin: 10px;
 }
