--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,22 +1,37 @@
 body {
+  font-family: "Open Sans", sans-serif;
   margin: 0px;
   background-color: white;
-  color: #acacac;
+  color: #8c8c8c;
   text-align: center;
 }
 
 section {
   margin: 20px auto;
-  padding: 5% 8%;
+  padding: 3% 8%;
 }
 
-h1 {
-  font-size: 2rem;
+hr {
+  border: 4px solid #fab757;
+  border-radius: 2px;
+  width: 70%;
+}
+
+h1,
+h2 {
+  font-size: 3rem;
   margin-bottom: 10px;
+  width: 79%;
+  margin: auto;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  margin: 40px auto;
+}
+
+img {
+  margin: 20px auto;
 }
 
 .sign-in {
